# sclr

./: .gitignore  .travis.yml  README.md  benchmark.txt  build.sbt  m1000.sql  m500.sql
bench/src/test/scala/bench/: CustomBench.scala
bench/src/test/scala/combinations/: CombinationsBench.scala
bench/src/test/scala/sclr/main/: SclrBench.scala
compute/src/main/scala/cluster/main/: ComputeApp.scala
deploy/docker/: Dockerfile-compute  Dockerfile-frontend  Dockerfile-manage
deploy/kubernetes/: akka-remoting.json  akka-remoting.yaml  compute.yaml  example.yaml  manage.yaml  startup.yaml  statefulset.json
frontend/src/main/scala/cluster/main/: FrontendApp.scala
project/: plugins.sbt
src/main/java/cluster/sclr/: ScriptRunner.java
src/main/java/sclr/core/: ScriptRunner.java
src/main/matlab/: generateData.m
src/main/resources/: application.conf  example-commands.txt  logback.xml
src/main/resources/datasets/: bodyfat.sql  boston.sql  boston_train2.sql  cpus.sql  insert.sql  m10000.sql  m10000_noise.sql  m5000.sql  m5000_noise.sql  m5000_noise2.sql  medium.sql  medium2.sql  small.sql  space.sql  space_train2.sql  tiny.sql
src/main/resources/datasets/example/: xLabel.csv
src/main/resources/datasets/house/: house.csv
src/main/resources/docker/: Dockerfile  Dockerfile-openjdk-jre-8-bash  entrypoint.sh
src/main/resources/example-dataset/: X_label.csv  ano1.csv  att1.csv  coeff.csv  x.csv
src/main/resources/kubernetes/: akka-remote.yaml  compute-pods.yaml  frontend-pods.yaml  manage-pods.yaml  mysql.yaml
src/main/resources/kubernetes/examples/: compute.yaml  manage.yaml  nginx.yaml  remoting-service.yaml
src/main/resources/sql/: 1 - up.sql
src/main/scala/cluster/main/: CheckDatabase.scala  ComputeApp.scala  DoobieCheckDatabase.scala  JDBCCheckDatabase.scala  LocalApp.scala  ManageApp.scala  Sclr.scala  Terminator.scala
src/main/scala/cluster/sclr/: DoWorkActor.scala  GiveWorkActor.scala  LocalDeploy.scala  Messages.scala  NetworkConfig.scala  SaveResultActor.scala  SystemManager.scala
src/main/scala/cluster/transformation/: TransformationApp.scala  TransformationBackend.scala  TransformationFrontend.scala  TransformationMessages.scala
src/main/scala/combinations/: CombinationAggregation.scala  CombinationBuilder.scala  Combinations.scala  CombinationsIterator.scala  GapSamplingIterator.scala  MultipliedIterator.scala  SamplingCombinationsIterator.scala  package.scala
src/main/scala/combinations/iterators/: CombinationsIterator.scala  GapSamplingIterator.scala  MultipliedIterator.scala  SamplingIterator.scala  SubsetIterator.scala
src/main/scala/sclr/core/: Messages.scala
src/main/scala/sclr/main/: CheckAnswer.scala  L2NormFastExample.scala  LocalApp.scala  RunComparison.scala  Sclr.scala
src/main/scala/streams/: BalanceHub.scala  MergeHub.scala
src/main/scala/weka/: Regression.scala  WorkloadRunner.scala
src/multi-jvm/scala/cluster/main/: ClusterSpec.scala
src/multi-jvm/scala/cluster/sclr/: ClusterSpec.scala
src/multi-jvm/scala/sclr/main/: ClusterSpec.scala  StreamRefSpec.scala
src/native/: CMakeLists.txt  Combinations.cpp  Combinations.h  Dataset.cpp  Dataset.h  L2NormSetCover.cpp  L2NormSetCover.h  Result.cpp  Result.h  SetCover.cpp  SetCover.h  Term.cpp  Term.h  Work.cpp  Work.h  l2normfast.c  l2normfast.cpp
src/native/include/: sclr_core_strategy_L2NormFastWrapper.h
src/native/src/: CMakeLists.txt  l2normfast.cpp
src/native/test/: CMakeLists.txt  CombinationsTest.cpp  L2NormSetCoverTest.cpp  tests.cpp
src/test/resources/: reference.conf
src/test/scala/cluster/http/: InfoServiceSpec.scala
src/test/scala/cluster/main/: DoobieCheckDatabase.scala  LocalApp.scala  ToyExample.scala  WekaExperiments.scala
src/test/scala/cluster/sclr/: LocalClusterSpec.scala
src/test/scala/cluster/transformation/: TransformationSampleSpec.scala
src/test/scala/combinations/: CombinationAggregationSpec.scala  CombinationBuilderSpec.scala  CombinationsSpec.scala  GapSamplingIteratorSpec.scala  MultipliedIteratorSpec.scala  SamplingCombinationsIteratorSpec.scala
src/test/scala/combinations/iterators/: GapSamplingIteratorSpec.scala  MultipliedIteratorSpec.scala  SamplingIteratorSpec.scala  SubsetIteratorSpec.scala
src/test/scala/sclr/main/: CLibraryExample.scala  DoobieCheckDatabase.scala  JDBCCheckDatabase.scala  ToyExample.scala
src/test/scala/weka/: RegressionSpec.scala
(+70 files in other folders)
